# siren

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: execute.rs  main.rs  parse_config.rs  task_output.rs
