[package]
name = "siren"
version = "1.4.0"
authors = ["Alessio Biancalana <dottorblaster@gmail.com>"]
description = "Your friendly neighborhood monitoring CLI tool."
homepage = "https://github.com/dottorblaster/siren"
repository = "https://github.com/dottorblaster/siren"
readme = "README.md"
license = "MIT"

[dependencies]
ansi_term = "~0.12.1"
clap = "~3.1.14"
serde = "~1.0.137"
serde_json = "~1.0.80"
serde_derive = "~1.0.137"
